--- a/src/Components/css/Home.css
+++ b/src/Components/css/Home.css
@@ -1,5 +1,5 @@
 .header1{
-    background-image: url('C:\Users\ronit\OneDrive\Documents\driver\FULL STACK MERN DEVELOPMENT\tourapp\client\src\Components\images\img1.png');
+    background-image: url('images/img1.png');
     background-size: cover;
     height: 500px;
 }
