--- a/src/Components/css/Train.css
+++ b/src/Components/css/Train.css
@@ -1,6 +1,6 @@
 .header{
     margin-top: 0%;
-    background-image: url('C:\Users\ronit\OneDrive\Documents\driver\FULL STACK MERN DEVELOPMENT\tourapp\client\src\Components\images\rail2.jpg');
+    background-image: url('images/rail2.jpg');
     background-size: cover;
     height: 600px;
 }
