--- a/src/Components/css/flight.css
+++ b/src/Components/css/flight.css
@@ -1,5 +1,5 @@
 .header{
-    background-image: url('C:\Users\ronit\OneDrive\Documents\driver\FULL STACK MERN DEVELOPMENT\tourapp\client\src\Components\images\background3.jpg');
+    background-image: url('images/background3.jpg');
     background-size: cover;
     height: 500px;
 }
