--- a/src/Components/css/Train.css
+++ b/src/Components/css/Train.css
@@ -66,3 +66,31 @@
     font-weight: bold;
     font-size: 1.3rem;
 }
+.irctclogo{
+    height: 40px;
+    width: 35px;
+}
+.poster{
+    display: flex;
+    padding: 30px;
+    max-width: fit-content;
+    margin: auto;
+    gap: 15px;
+}
+.poster-elements{
+    display: flex;
+    flex-wrap:nowrap;
+    max-width: fit-content;
+    margin-left: 100px;
+    margin-right: 100px;
+}
+.posteritems{
+    /* width: 500 px; */
+    padding: 20px;
+    display: flex;
+    gap:15px;
+}
+.postersicon{
+    height: 50px;
+    width: 45px;
+}
